--- a/app/src/main/res/layout/contact_emergency_support.xml
+++ b/app/src/main/res/layout/contact_emergency_support.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_weight="2">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -24,27 +25,33 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        >
+        android:layout_marginTop="10dp"
+        android:orientation="vertical"
+        android:layout_marginBottom="15dp">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:text="1. Emergency contact"
+            android:textColor="@color/colorButton"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-        <android.support.v7.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            card_view:cardCornerRadius="15dp"
-            card_view:contentPadding="11dp"
-            card_view:cardBackgroundColor="@color/colorWhite"
-            android:gravity="center"
-            >
+            android:layout_marginTop="15dp"
+            android:gravity="center">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layout_weight="3"
-                android:id="@+id/addContactLayout">
+                android:id="@+id/addContactLayout"
+                android:layout_marginLeft="15dp">
 
                 <TextView
                     android:id="@+id/nameValue"
@@ -53,7 +60,7 @@
                     android:paddingTop="5dp"
                     android:text="Name: "
                     android:textSize="25sp"
-                    android:textStyle="bold"
+                    android:textStyle="normal"
                     android:textColor="@color/colorButton"
                     />
 
@@ -66,7 +73,7 @@
                     android:layout_marginLeft="20dp"
                     android:text="Phone Number"
                     android:textSize="25sp"
-                    android:textStyle="bold"
+                    android:textStyle="normal"
                     android:textColor="@color/colorButton"
                     />
 
@@ -76,83 +83,146 @@
                     android:layout_height="45dp"
                     android:layout_gravity="right"
                     android:layout_marginLeft="20dp"
-
                     android:background="@drawable/edit"
                     android:backgroundTint="@color/colorButton" />
 
 
             </LinearLayout>
 
-
-        </android.support.v7.widget.CardView>
-
+        </LinearLayout>
 
     </LinearLayout>
 
-
-
-    <RelativeLayout
+    <View
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="25dp"
-        >
+        android:layout_height="2px"
+        android:background="@color/colorBlack"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical"
 
+        android:layout_marginBottom="15dp">
 
-        <android.support.v7.widget.CardView
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="2. Emergency call"
+            android:paddingTop="5dp"
+            android:textColor="@color/colorButton"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/emergencycall"
             android:layout_gravity="center"
+            app:fabCustomSize="80dp"
+            app:fabSize="auto"
+            app:maxImageSize="80dp"  />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2px"
+        android:background="@color/colorBlack"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical"
+
+        android:layout_marginBottom="15dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="3. Location sharing"
+            android:paddingTop="5dp"
+            android:textColor="@color/colorButton"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/sendLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:src="@drawable/emergencymessage"
+                app:fabCustomSize="80dp"
+                app:fabSize="auto"
+                app:maxImageSize="80dp" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/sharelocation2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="150dp"
+                android:src="@drawable/sharelocation"
+                android:layout_gravity="center|right"
+                app:fabCustomSize="80dp"
+                app:fabSize="auto"
+                app:maxImageSize="80dp"  />
+        </LinearLayout>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2px"
+        android:background="@color/colorBlack"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="10dp"
+
+        android:layout_marginBottom="15dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:text="4. Navigation to a safe place"
+            android:textColor="@color/colorButton"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="24 Hours Open Shop"
             android:layout_marginTop="10dp"
-            card_view:cardCornerRadius="10dp"
-            card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="@color/colorWhite"
-            android:gravity="center"
-            >
+            tools:layout_editor_absoluteX="77dp"
+            android:layout_gravity="center"
+            android:textColor="@color/cardview_light_background"
+            android:background="@drawable/round_cornered2" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_weight="3">
+        <Button
+            android:id="@+id/navigatetopolice"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Police Sation"
+            android:layout_marginTop="17dp"
+            android:layout_gravity="center"
+            android:textColor="@color/cardview_light_background"
+            android:background="@drawable/round_cornered2"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:paddingTop="5dp"
-                    android:text="Location Sharing"
-                    android:textSize="25sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorButton"
-                    />
-
-
-                <Button
-                    android:id="@+id/infoShareLocation"
-                    android:layout_width="25dp"
-                    android:layout_height="20dp"
-                    android:layout_gravity="fill_vertical"
-                    android:background="@drawable/tooltips"
-                    android:backgroundTint="@color/colorButton" />
-
-                <Button
-                    android:id="@+id/sendLocation"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:layout_gravity="right"
-                    android:layout_marginLeft="80dp"
-
-                    android:background="@drawable/share"
-                    android:backgroundTint="@color/colorButton" />
-
-
-            </LinearLayout>
-
-
-        </android.support.v7.widget.CardView>
-
-
-
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
