--- a/app/src/main/res/layout/customwindow.xml
+++ b/app/src/main/res/layout/customwindow.xml
@@ -2,11 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_gravity="top|center"
+    android:gravity="center">
     <LinearLayout
-        android:layout_width="350dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,83 +28,174 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
     </LinearLayout>
-     <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_below="@+id/lay1"
-    android:id="@+id/lay2"
-    android:weightSum="3">
-         <ImageView
-             android:layout_width="20dp"
-             android:layout_height="30dp"
-             android:background="@drawable/map"
-             android:layout_marginTop="8dp"
-             android:layout_weight="0.3"/>
-    <TextView
-        android:id="@+id/address"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_weight="2"
-        android:text="address"
-        android:textSize="15sp"
-        android:typeface="sans"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/lay1"
+        android:id="@+id/lay2"
+        android:weightSum="3">
+             <ImageView
+                 android:layout_width="20dp"
+                 android:layout_height="20dp"
+                 android:background="@drawable/map"
+                 android:layout_marginTop="8dp"
+                 android:layout_weight="0.3"/>
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="2.7"
+                android:text="address"
+                android:textSize="14sp"
+                android:typeface="sans"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"
+                android:text="Latest Sensor Reading:"
+                android:textSize="14sp"
+                android:typeface="sans"
+                android:textStyle="bold"/>
+        </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/lay6"
+        android:weightSum="4">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/clock"
+                android:layout_marginTop="8dp"/>
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="5dp"
+                android:text="time"
+                android:textSize="14sp"
+                android:typeface="sans"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2">
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/pedestrians"
+                android:layout_marginTop="8dp"/>
+            <TextView
+                android:id="@+id/total"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="5dp"
+                android:text="pedestrians"
+                android:textSize="14sp"
+                android:typeface="sans"/>
+        </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@+id/lay2"
-        android:layout_marginTop="8dp"
+        android:layout_below="@+id/lay1"
+        android:id="@+id/lay5"
+        android:weightSum="4">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginLeft="5dp"
+                        android:text="Prediction:"
+                        android:textSize="14sp"
+                        android:typeface="sans"
+                        android:textStyle="bold"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:text="Usually ---"
+                    android:textSize="14sp"
+                    android:typeface="sans"/>
+            </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/lay4"
         android:id="@+id/lay3"
-        android:weightSum="3">
+        android:weightSum="4">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2">
 
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="30dp"
-            android:background="@drawable/clock"
-            android:layout_marginTop="8dp"
-            android:layout_weight="0.25"/>
-        <TextView
-            android:id="@+id/time"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="2"
-            android:text="time"
-            android:textSize="15sp"
-            android:typeface="sans"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@+id/lay3"
-        android:layout_marginTop="8dp"
-        android:id="@+id/lay4"
-        android:weightSum="3">
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="30dp"
-            android:background="@drawable/pedestrians"
-            android:layout_marginTop="8dp"
-            android:layout_weight="0.25"/>
-        <TextView
-            android:id="@+id/total"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="15dp"
-            android:layout_weight="2"
-            android:text="pedestrians"
-            android:textSize="15sp"
-            android:typeface="sans"/>
-    </LinearLayout>
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/clock"
+                android:layout_marginTop="8dp"/>
+            <TextView
+                android:id="@+id/predict_time"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="5dp"
+                android:text="time"
+                android:textSize="14sp"
+                android:typeface="sans"/>
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/lay4"
+            android:layout_weight="2">
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/pedestrians"
+                android:layout_marginTop="8dp"/>
+            <TextView
+                android:id="@+id/predict_total"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="5dp"
+                android:text="pedestrians"
+                android:textSize="14sp"
+                android:typeface="sans"/>
+        </LinearLayout>
     </LinearLayout>
 
+    </LinearLayout>
 </LinearLayout>
