--- a/app/src/main/res/layout/customwindow.xml
+++ b/app/src/main/res/layout/customwindow.xml
@@ -138,6 +138,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2">
                 <TextView
+                    android:id="@+id/busyness"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="5dp"
