safety score done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,7 @@
             android:layout_marginStart="30dp"
             android:layout_gravity="center|bottom|left"
             android:src="@drawable/emergencymessage"
+            android:tooltipText="Send an emergency message"
             app:borderWidth="0dp"
             app:maxImageSize = "72dp"
             app:fabSize="auto"
@@ -130,6 +131,7 @@
             android:layout_marginTop="50dp"
             android:layout_marginEnd="30dp"
             android:src="@drawable/emergencycall"
+            android:tooltipText="Call an emergency guardian"
             app:borderWidth="0dp"
             app:fabCustomSize="70dp"
             app:fabSize="auto"
