--- a/app/src/main/res/layout/route_activity.xml
+++ b/app/src/main/res/layout/route_activity.xml
@@ -401,7 +401,7 @@
             android:layout_width="33dp"
             android:layout_height="31dp"
             android:layout_weight="0.2"
-            android:src="@drawable/sensornew2" />
+            android:src="@drawable/sensornew3" />
 
         <TextView
             android:layout_width="0dp"
@@ -410,7 +410,7 @@
             android:layout_weight="1.7"
             android:textStyle="bold"
             android:textSize="20dp"
-            android:text="Sensor Count"></TextView>
+            android:text="Pedestrian Sensor"></TextView>
 
         <TextView
             android:id="@+id/sensorCount"
